[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Knight.gd" type="Script" id=1]
[ext_resource path="res://Sprites/mobs/Knight Skeleton/Attack 1/Separated sp/attack 1 (10).png" type="Texture" id=2]
[ext_resource path="res://Animation/Mobs/Knight_Attack1.tres" type="Animation" id=3]
[ext_resource path="res://Animation/Mobs/Knight_Attack2.tres" type="Animation" id=4]
[ext_resource path="res://Animation/Mobs/Knight_Death.tres" type="Animation" id=5]
[ext_resource path="res://Animation/Mobs/Knight_Idle.tres" type="Animation" id=6]
[ext_resource path="res://Animation/Mobs/Knight_Walk.tres" type="Animation" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160.773, 255.409 )

[node name="Knight" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 18.7005, 88.7634 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 3.8147e-005, 19.2043 )
collision_layer = 524288

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 18.7005, 69.5591 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="Sprite"]
autoplay = "Idle"
anims/Attack1 = ExtResource( 3 )
anims/Attack2 = ExtResource( 4 )
anims/Death = ExtResource( 5 )
anims/Idle = ExtResource( 6 )
anims/Walk = ExtResource( 7 )

[node name="DetectFloorLeft" type="RayCast2D" parent="."]
position = Vector2( -50, 239.204 )
scale = Vector2( 3, 2 )
enabled = true
cast_to = Vector2( 0, 60 )

[node name="DetectFloorRight" type="RayCast2D" parent="."]
position = Vector2( 184.735, 239.204 )
scale = Vector2( 3, 2 )
enabled = true
cast_to = Vector2( 0, 60 )

[node name="DetectWallLeft" type="RayCast2D" parent="."]
position = Vector2( 3.8147e-005, 239.204 )
rotation = 1.5708
scale = Vector2( 3, 2.5 )
enabled = true
cast_to = Vector2( 0, 60 )

[node name="DetectWallRight" type="RayCast2D" parent="."]
position = Vector2( 33, 239.204 )
rotation = 4.71239
scale = Vector2( 3, 2.5 )
enabled = true
cast_to = Vector2( 0, 60 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
